# myreferee

./: .gitignore  Journal of Financial Econometr_Sovereign Portfolio Concentration and Home Bias_ A_20260127.md  README.md  pyproject.toml
config/: settings.yaml
src/myreferee/: __init__.py  __main__.py  agent.py  cli.py  config.py  web.py
src/myreferee/prompts/: __init__.py  system_prompt.py
src/myreferee/templates/: index.html
src/myreferee/tools/: __init__.py  journal_research.py  paper_parser.py  report_generator.py
