[project]
name = "myreferee"
version = "0.1.0"
description = "AI-powered academic referee agent for economics/finance papers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Charalampos Agiropoulos" }
]
keywords = ["economics", "finance", "academic", "referee", "review", "paper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "pylatexenc>=2.10",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
]

[project.scripts]
myreferee = "myreferee.cli:main"
myreferee-web = "myreferee.web:run_server"

[project.urls]
Repository = "https://github.com/hagyro/myreferee"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myreferee"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
